# py_diffgeom

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
metrics/: alcubierre_warp_drive.yaml  arbitrary_function_2d.yaml  flrw.yaml  kasner.yaml  minkowski_flat.yaml  morris_thorne_flrw_wormhole.yaml  morris_thorne_schw_coords.yaml  morris_thorne_wormhole.yaml  schwarzschild.yaml  sphere_2d.yaml
src/diffgeom/: __init__.py  app.py  cli.py  config.py  expr.py  formatting.py  metric.py  quantities.py  tensor.py
tests/: conftest.py  test_app.py  test_cli.py  test_curvature.py  test_expr.py  test_geodesic.py  test_killing.py  test_metric.py  test_tensor.py
